tests/baselines/reference/tsxSpreadChildren.errors.txt
tsxSpreadChildren.tsx(25,19): error TS2454: Variable 'x' is used before being assigned.


==== tsxSpreadChildren.tsx (1 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    interface TodoProp {
        id: number;
        todo: string;
    }
    interface TodoListProps {
        todos: TodoProp[];
    }
    function Todo(prop: { key: number, todo: string }) {
        return <div>{prop.key.toString() + prop.todo}</div>;
    }
    function TodoList({ todos }: TodoListProps) {
        return <div>
            {...todos.map(todo => <Todo key={todo.id} todo={todo.todo}/>)}
        </div>;
    }
    let x: TodoListProps;
        <TodoList {...x}/>
                      ~
!!! error TS2454: Variable 'x' is used before being assigned.
    